# BrainHarmonics

./: .gitignore  BrainHarmonics.cc  BrainHarmonics.plist  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CommIntf.h  CommIntf.h~  Makefile  MpiComm.h  README.md  RHEL8.2-aarch64_installed.txt  abstraction.h  axon.cc  axonbouton.cc  axonbouton.h  axonbranch.cc  axonhillock.cc  axonhillock.h  bhcompute.py  ccp2x0.in  ccp2xx0.in  cellmembrane.cpp  cmake_script  cmake_temp  cognitiveinput.cc  cognitiveinput.h  cognitivenetwork.cc  cognitivenetwork.h  compositeforceparticle.cc  dendrite.cc  dendrite.h  dendritebranch.cc  dendritebranch.h  dendritecleft.cc  dimension.h  elementaryforce.cc  elementaryforce.h  elementaryparticle.cc  elementaryparticle.h  (+69 more)
BrainHarmonics/: .cproject  .project  .pydevproject  BrainHarmonics.cc  CMakeLists.txt  Cagate.cpp  Cagate.hpp  FindCAER.cmake  Kchannel.cpp  Kchannel.hpp  Nachannel.cpp  Nachannel.hpp  ResourcePath.mm  abstraction.cc  apptimer.cc  apptimer.h  axon.cc  axon.cpp  axon.h  axon.hpp  axonbouton.cpp  axonbouton.hpp  axonbranch.cc  axonbranch.cpp  axonbranch.h  axonbranch.hpp  axoncleft.cpp  axoncleft.hpp  axonhillock.cpp  axonhillock.h  axonhillock.hpp  ccp2x0.in  cognitivenetwork.h  cognitiveoutput.cc  cognitiveoutput.h  compositeforceparticle.h  dendrite.cc  dendrite.cpp  dendrite.hpp  dendritebranch.cc  (+78 more)
BrainHarmonics/.metadata/: version.ini
BrainHarmonics/docs/: Doxyfile
BrainHarmonics/docs/html/: BrainHarmonics_8cc.html  _brain_harmonics_2_c_make_files_23_816_83_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  _brain_harmonics_2_c_make_files_23_816_83_2_compiler_id_c_2_c_make_c_compiler_id_8c.js  _brain_harmonics_2_c_make_files_23_816_83_2_compiler_id_c_2_c_make_c_compiler_id_8c_source.html  _brain_harmonics_2_c_make_files_23_816_83_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  _brain_harmonics_2_c_make_files_23_816_83_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.js  _brain_harmonics_2_c_make_files_23_816_83_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  _brain_harmonics_2_c_make_files_23_816_83_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _brain_harmonics_2_c_make_files_2_check_type_size_2_c_m_a_k_e___s_i_z_e_o_f___u_n_s_i_g_n_e_d___s_h_o_r_t_8c.html  _brain_harmonics_2_c_make_files_2_check_type_size_2_c_m_a_k_e___s_i_z_e_o_f___u_n_s_i_g_n_e_d___s_h_o_r_t_8c.js  _brain_harmonics_2_c_make_files_2_check_type_size_2_c_m_a_k_e___s_i_z_e_o_f___u_n_s_i_g_n_e_d___s_h_o_r_t_8c__incl.map  _brain_harmonics_2_c_make_files_2_check_type_size_2_c_m_a_k_e___s_i_z_e_o_f___u_n_s_i_g_n_e_d___s_h_o_r_t_8c__incl.md5  _brain_harmonics_2_c_make_files_2_check_type_size_2_c_m_a_k_e___s_i_z_e_o_f___u_n_s_i_g_n_e_d___s_h_o_r_t_8c_source.html  _brain_harmonics_2_c_make_files_2_check_type_size_2_s_i_z_e_o_f___s_i_z_e___t_8c.html  _brain_harmonics_2_c_make_files_2_check_type_size_2_s_i_z_e_o_f___s_i_z_e___t_8c.js  _brain_harmonics_2_c_make_files_2_check_type_size_2_s_i_z_e_o_f___s_i_z_e___t_8c__incl.md5  _brain_harmonics_2_c_make_files_2_check_type_size_2_s_i_z_e_o_f___s_i_z_e___t_8c_source.html  _brain_harmonics_2_c_make_files_2_check_type_size_2_s_i_z_e_o_f___v_o_i_d___p_t_r_8c.html  _brain_harmonics_2_c_make_files_2_check_type_size_2_s_i_z_e_o_f___v_o_i_d___p_t_r_8c.js  _brain_harmonics_2_c_make_files_2_check_type_size_2_s_i_z_e_o_f___v_o_i_d___p_t_r_8c_source.html  _brain_harmonics_8cc.html  _brain_harmonics_8cc.js  _brain_harmonics_8cc_a487a3c399210173e1b3d3a2f275a55b1_cgraph.map  _brain_harmonics_8cc_a487a3c399210173e1b3d3a2f275a55b1_cgraph.md5  _brain_harmonics_8cc_a487a3c399210173e1b3d3a2f275a55b1_icgraph.map  _brain_harmonics_8cc_a487a3c399210173e1b3d3a2f275a55b1_icgraph.md5  _brain_harmonics_8cc_a55df3b158eee1a481690c9438138bd07_cgraph.map  _brain_harmonics_8cc_a55df3b158eee1a481690c9438138bd07_cgraph.md5  _brain_harmonics_8cc_a5b7bc303552f00bc26a7b5bf962f3376_cgraph.map  _brain_harmonics_8cc_a5b7bc303552f00bc26a7b5bf962f3376_cgraph.md5  _brain_harmonics_8cc_a8760404347fd84a1ed5b49aae3737647_icgraph.map  _brain_harmonics_8cc_a8760404347fd84a1ed5b49aae3737647_icgraph.md5  _brain_harmonics_8cc_ab8cdde3a90c31c1e2f30432b507359c1_icgraph.map  _brain_harmonics_8cc_ab8cdde3a90c31c1e2f30432b507359c1_icgraph.md5  _brain_harmonics_8cc_ac0f2228420376f4db7e1274f2b41667c_cgraph.map  _brain_harmonics_8cc_ac0f2228420376f4db7e1274f2b41667c_cgraph.md5  _brain_harmonics_8cc_aeab5d0ce3757048194ec88e39b7fa82b_cgraph.map  _brain_harmonics_8cc_aeab5d0ce3757048194ec88e39b7fa82b_cgraph.md5  _brain_harmonics_8cc_source.html  _brain_harmonics_8d.html  (+4143 more)
BrainHarmonics/docs/latex/: BrainHarmonics_8cc.tex  _brain_harmonics_2_c_make_files_23_816_83_2_compiler_id_c_2_c_make_c_compiler_id_8c.tex  _brain_harmonics_2_c_make_files_23_816_83_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.tex  _brain_harmonics_2_c_make_files_2_check_type_size_2_c_m_a_k_e___s_i_z_e_o_f___u_n_s_i_g_n_e_d___s_h_o_r_t_8c.tex  _brain_harmonics_2_c_make_files_2_check_type_size_2_c_m_a_k_e___s_i_z_e_o_f___u_n_s_i_g_n_e_d___s_h_o_r_t_8c__incl.md5  _brain_harmonics_2_c_make_files_2_check_type_size_2_s_i_z_e_o_f___s_i_z_e___t_8c.tex  _brain_harmonics_2_c_make_files_2_check_type_size_2_s_i_z_e_o_f___v_o_i_d___p_t_r_8c.tex  _brain_harmonics_8cc.tex  _brain_harmonics_8cc_a487a3c399210173e1b3d3a2f275a55b1_cgraph.md5  _brain_harmonics_8cc_a487a3c399210173e1b3d3a2f275a55b1_icgraph.md5  _brain_harmonics_8cc_a55df3b158eee1a481690c9438138bd07_cgraph.md5  _brain_harmonics_8cc_a5b7bc303552f00bc26a7b5bf962f3376_cgraph.md5  _brain_harmonics_8cc_a8760404347fd84a1ed5b49aae3737647_icgraph.md5  _brain_harmonics_8cc_ab8cdde3a90c31c1e2f30432b507359c1_icgraph.md5  _brain_harmonics_8cc_ac0f2228420376f4db7e1274f2b41667c_cgraph.md5  _brain_harmonics_8cc_aeab5d0ce3757048194ec88e39b7fa82b_cgraph.md5  _brain_harmonics_8d.tex  _c_m_a_k_e___s_i_z_e_o_f___u_n_s_i_g_n_e_d___s_h_o_r_t_8c.tex  _c_m_a_k_e___s_i_z_e_o_f___u_n_s_i_g_n_e_d___s_h_o_r_t_8c__incl.md5  _c_make_files_2feature__tests_8c.tex  (+2090 more)
test-tools/MpiApp/: CMakeLists.txt  README
(+1623 files in other folders)
